fixed mobile and large layout

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <title>Tattoos By Boat</title>
   </head>
-  <body>
+  <body className="mobileVsDesktop">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
